Fixed navbar on mobile to align correctly

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -209,6 +209,13 @@ form {
   border: none;
 }
 
+.navbar-nav {
+  .nav-link {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
 .wrapper {
   box-sizing: border-box;
   position: relative;
